--- a/WebWind/Resources/index.html
+++ b/WebWind/Resources/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title></title>
     </head>
     <body>
